# QuantCalx

./: .gitignore  README.md
engine/: Cargo.toml
engine/src/: main.rs
frontend/: pubspec.yaml
frontend/android/app/src/main/: AndroidManifest.xml
frontend/lib/: app_theme.dart  main.dart
frontend/lib/providers/: theme_provider.dart  user_provider.dart
frontend/lib/screens/: account_screen.dart  calculator_screen.dart  home_screen.dart  onboarding_screen.dart  settings_screen.dart  splash_screen.dart
frontend/test/: widget_test.dart
